--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@date-io/date-fns": "^2.15.0",
+    "@date-io/jalaali": "^2.15.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fontsource/montserrat": "^4.5.11",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
+    "@mui/x-date-pickers": "^5.0.0-beta.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "emoji-mart": "3.0.1",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.9.6",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
